{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "ccdf8940-44d7-4d4d-b742-3ce7c960fd6f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3b9872d2-cab6-4831-b7e9-7c7a848916f8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c8cb1997-297b-4759-b969-d5859062872c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DashLeft",
                    "type": "Button",
                    "id": "bd4985ea-3a7e-43d9-8487-4a656ca09cd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DashRight",
                    "type": "Button",
                    "id": "2f3aca5b-80c6-4f38-adb4-dda46a40466b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd66490c-8f7b-455f-a6b1-6c01cb71b3d8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c833235-3692-4e40-8acb-9e5d864b65cc",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "289ddf9c-2568-44a8-b070-a750f743fabe",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c13724b6-ca30-4e06-996e-2f2c6cbe2b84",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}